# rust-aws-step-lambda

./: README.md
async-lambda-s3/: Cargo.toml
async-lambda-s3/src/: lib.rs  main.rs
file_reader_lambda/: Cargo.toml
file_reader_lambda/src/: main.rs
